--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "input_dir": "C:/Users/flori/Desktop/mtg proxys/input_images",
-    "output_dir": "C:/Users/flori/Desktop/mtg proxys/output_images"
+    "input_dir":,
+    "output_dir": 
 }
